# backstage-demo

./: README.md  guide.md
bs-demo/: .gitignore  README.md  app-config.yaml  catalog-info.yaml  package.json
bs-demo/entities/: entities.yaml  org.yaml
bs-demo/entities/template/: README.md  template.yaml
bs-demo/entities/template/github_content/: CONTRIBUTING.md  SECURITY.md
bs-demo/entities/template/github_content/docs/: conf.py
bs-demo/entities/template/github_content/docs/docs/: index.rst
bs-demo/entities/template/gitlab_content/: README.md
bs-demo/examples/: entities.yaml  org.yaml
bs-demo/examples/template/: README.md  template.yaml
bs-demo/examples/template/content/: catalog-info.yaml
bs-demo/examples/template/github_content/: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  catalog-info.yaml  pyproject.toml
bs-demo/examples/template/github_content/.github/workflows/: check.yml
bs-demo/examples/template/gitlab_content/: catalog-info.yaml
bs-demo/plugins/demo-plugin/: README.md  package.json
bs-demo/plugins/demo-plugin/dev/: index.tsx
bs-demo/plugins/demo-plugin/src/: index.ts  plugin.test.ts  plugin.ts  routes.ts
bs-demo/plugins/demo-plugin/src/components/ExampleComponent/: ExampleComponent.test.tsx  ExampleComponent.tsx
